--- a/views/room.ejs
+++ b/views/room.ejs
@@ -86,6 +86,10 @@
                   <i class="fas fa-photo-video"></i>
                   <span>ScreenShare</span>
                 </div>
+                <div onclick="whiteBoard()" class="main__controls__button">
+                  <i class="fas fa-pen"></i>
+                  <span>WhiteBoard</span>
+                </div>
               </div>
               <div class="main__controls__block">
                 <div
